<resources>
    <string name="app_name">Tip Time</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="textview">Textview</string>
    <string name="amount">amount</string>
    <string name="unit_2">Unit 2</string>
    <string name="convert">convert</string>
</resources>